--- a/index.html
+++ b/index.html
@@ -1,12 +1,229 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Document</title>
   <link rel="stylesheet" href="css/main.css">
+  <link rel="stylesheet" href="responsive.css">
 </head>
+
 <body>
-  <h1>Github test</h1>
+  <div class="container">
+    <div class="header">
+      <div class="logo">
+        <img src="https://daryo.uz/logo/logo.svg">
+      </div>
+      <ul class="menu">
+        <li><a href="#">MAHALLIY</a></li>
+        <li><a href="#">MARKAZIY OSIYO</a></li>
+        <li><a href="#">DUNYO</a></li>
+        <li><a href="#">PUL</a></li>
+        <li><a href="#">MADANIYAT</a></li>
+        <li><a href="#">LAYFSTAYL</a></li>
+        <li><a href="#">SPORT</a></li>
+        <li><a href="#">KOLUMNISTLAR</a></li>
+        <li><a href="#">MULTIMEDIA</a></li>
+      </ul>
+      <div class="buttons">
+        <div class="search">
+          <i class="fi fi-br-search"></i>
+        </div>
+        <div class="language">
+          Uzb
+        </div>
+      </div>
+    </div>
+    <div class="header_bottons">
+      <div class="row">
+        <div class="today">
+          <div class="weather">
+            <span> Bugun,</span>
+            <div class="time">Seshanba,07:42</div>
+          </div>
+          <div class="region">
+            <div class="sun">
+              <i class="fi fi-rr-brightness"></i>
+            </div>
+            <div class="date">
+              <span>Navoiyda <i class="fi fi-rr-angle-small-down"></i></span>
+              +35°C
+            </div>
+          </div>
+        </div>
+        <div class="currency">
+          <ul class="curency-item">
+            <li>USD 11095.31 <i class="fi fi-rr-caret-up"></i></li>
+            <li>RUB 134.83 <i class="fi fi-rr-caret-up"></i></li>
+            <li>EUR 11772.44 <i class="fi fi-rr-caret-up"></i></li>
+          </ul>
+          <ul class="apps">
+            <li><i class="fi fi-brands-android"></i> Play Market</li>
+            <li><i class="fi fi-brands-apple"></i> App Store</li>
+            <li><i class="fi fi-brands-telegram"></i> Telegram</li>
+          </ul>
+        </div>
+      </div>
+    </div>
+    <div class="row">
+      <div class="aside">
+        <div class="tittle">
+          <span>So'ngi yangiliklarga o'tish<i class="fi fi-rr-angle-small-right"></i></span>
+        </div>
+        <ul class="aside-news">
+          <li>
+            <a href="#">
+              <span> Bugun, 09:26</span>
+              <div class="text">
+                O‘zbekistondagi erkaklar va ayollar soni e’lon qilindi
+              </div>
+            </a>
+          </li>
+          <li>
+            <a href="#">
+              <span> Bugun, 09:17</span>
+              <div class="text">
+                O‘zbekistonda davlat muassasalari faoliyat ko‘rsatish tartibi belgilandi
+              </div>
+            </a>
+          </li>
+          <li>
+            <a href="#">
+              <span> Bugun, 09:11</span>
+              <div class="text">
+                Rossiya qo‘shinlari Donetskni kassetali bombalar bilan o‘qqa tutdi. 10 yashar bola halok bo‘ldi
+              </div>
+            </a>
+          </li>
+          <li>
+            <a href="#">
+              <span> Bugun, 08:50</span>
+              <div class="text">
+                O‘zbekistonda mahallalarda kasanachilikni tashkil etgan tadbirkorlarga subsidiya ajratish tartibi
+                belgilandi
+              </div>
+            </a>
+          </li>
+          <li>
+            <a href="#">
+              <span> Bugun, 08:30</span>
+              <div class="text">
+                Nukus davlat pedagogika instituti prorektori pora bilan qo‘lga tushdi
+              </div>
+            </a>
+          </li>
+          <li>
+            <a href="#">
+              <span> Bugun, 08:00</span>
+              <div class="text">
+                O‘zbekiston Konstitutsiyaviy sudining vakolatlari kengayadi
+              </div>
+            </a>
+          </li>
+        </ul>
+      </div>
+      <div class="main">
+        <img src="https://avatars.mds.yandex.net/get-adfox-content/2765366/230701_adfox_2464220_7118659.90333464e9c462c172e11e78c96dd17a.jpg/optimize.webp">
+        <div class="inside-main">
+          <div class="little-foto">
+            <div class="new-foto">
+              <img src="https://daryo.uz/static/2023/07/thumb-64bec32523282.jpg">
+            </div>
+            <div class="little-text">
+              <span>Mahalliy</span><br>
+              <div class="new-text">
+                Surxondaryoda YPX inspektorlari tarvuz o‘g‘irlagani aytilgan video tarqaldi (video)
+              </div>
+              <div class="time">
+                Bugun, 08:29
+              </div>
+            </div>
+          </div>
+          <div class="large-foto">
+            <div class="inside-foto">
+              <img src="https://daryo.uz/static/2023/07/medium-64bf3f1a5fe4a.jpg">
+            </div>
+            <div class="large-text">
+              <span>Mahalliy</span><br>
+              <div class="new-text"> O‘zbekiston Konstitutsiyaviy sudining vakolatlari kengayadi</div>
+              <div class="time">
+                Bugun, 08:29
+              </div>
+            </div>
+          </div>
+        </div>
+        <div class="read-news">
+          <div class="static">
+            <div class="static-foto">
+              <img src="https://daryo.uz/static/2023/07/thumb-64bb66d4aa04f.jpg">
+            </div>
+            <div class="static-news">
+              <div class="world">Dunyo</div>
+              <div class="statick-text">
+                Janubiy Koreya prezidentining qaynonasi hibsga olindi
+              </div>
+              <div class="article-meta">
+                <div class="hour">
+                  Bugun, 10:48
+                </div>
+                <div class="look">
+                  <img src="https://www.pngrepo.com/png/133857/512/eye.png">
+                  <div class="number">
+                    12355
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
+          <div class="static">
+            <div class="static-foto">
+              <img src="https://daryo.uz/static/2023/07/thumb-64bc18dd487e2.jpg">
+            </div>
+            <div class="static-news">
+              <div class="world">Dunyo</div>
+              <div class="statick-text">
+                UFC Fight Night 224. Mahmud Murodov amerikalik raqibini mag'lubiyatga uchratdi
+              </div>
+              <div class="article-meta">
+                <div class="hour">
+                  Bugun, 2:58
+                </div>
+                <div class="look">
+                  <img src="https://www.pngrepo.com/png/133857/512/eye.png">
+                  <div class="number">
+                    13000
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
+          <div class="static">
+            <div class="static-foto">
+              <img src="https://daryo.uz/static/2023/07/thumb-64bb6739baadc.jpg">
+            </div>
+            <div class="static-news">
+              <div class="world">Dunyo</div>
+              <div class="statick-text">
+                “O‘zgidromet” 23-iyulda qanday ob-havo kuzatilishini ma’lum qildi
+              </div>
+              <div class="article-meta">
+                <div class="hour">
+                  Bugun, 10:58
+                </div>
+                <div class="look">
+                  <img src="https://www.pngrepo.com/png/133857/512/eye.png">
+                  <div class="number">
+                    11500
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
 </body>
+
 </html>
